SCMOD-3111: Updated to add CRUD operations for tenant specific configs (#33)
